# diagkit

./: .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  go.mod
.github/workflows/: ci.yml
cmd/diagkit/: main.go  main_test.go
internal/bundle/: bundle.go
internal/fingerprint/: fingerprint.go  fingerprint_test.go
internal/history/: history.go  history_test.go
internal/sim/: sim.go  sim_test.go
py/: README.md  pyproject.toml
py/diagkit_rca/: __init__.py  analyzer.py  bundle.py  cli.py  history.py  report.py
py/tests/: fixture_cascade.json  fixture_db.json  fixture_healthy.json  fixture_payments.json  fixture_rollout.json  test_analyzer.py  test_baseline.py  test_cli.py  test_history.py  test_report.py  test_severity.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  theme.css  useDiagnosis.ts
web/src/components/: AnimatedNumber.tsx  Footer.css  Footer.tsx  Hero.css  Hero.tsx  RootCause.css  RootCause.tsx  Signatures.css  Signatures.tsx  Sparkline.tsx  Topology.css  Topology.tsx  useReducedMotion.ts
web/src/sim/: analyzer.ts  fingerprint.ts  generate.ts  pcg.ts  pipeline.ts  types.ts
