[project]
name = "diagkit-rca"
version = "0.1.0"
description = "Root-cause analyzer for diagkit incident bundles"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sai Asish Y", email = "say.apm35@gmail.com" }]
dependencies = ["click>=8.1"]

[project.scripts]
diagkit-rca = "diagkit_rca.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diagkit_rca"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
